@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdAH.test,v 1.30.2.5 2005/11/15 16:41:41 kennykb Exp $
+# RCS: @(#) $Id$
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2.1
@@ -1448,6 +1448,21 @@ test cmdAH-24.12 {Tcl_FileObjCmd: mtime and daylight savings} {
     file delete $name
     expr {$newmtime == $time ? 1 : "$newmtime != $time"}
 } {1}
+
+# bug 1420432: setting mtime fails for directories on windows.
+test cmdAH-24.13 {Tcl_FileObjCmd: directory mtime} {
+    set dirname [file join [temporaryDirectory] tmp[pid]]
+    file delete -force $dirname
+    file mkdir $dirname
+    set res [catch {
+        set old [file mtime $dirname]
+        file mtime $dirname 0
+        set new [file mtime $dirname]
+        list $new [expr {$old != $new}]
+    } err]
+    file delete -force $dirname
+    list $res $err
+} {0 {0 1}}
 
 # owned
 
