@@ -1,3 +1,8 @@
+2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tclWinFile.c: Backported fix for bug #1420432 (cannot set 
+	* tests/cmdAH.test: mtime for directories on windows).
+
 2006-09-30  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
